Added socket connection in badge generation Fixes : #666

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="{{rootURL}}css/jquery.minicolors.css">
     <link rel="stylesheet" href="{{rootURL}}css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.slim.js'></script>
     <link rel="shortcut icon" href="{{rootURL}}favicon.ico">
 
     {{content-for "head-footer"}}
@@ -37,6 +38,6 @@
     <script src="{{rootURL}}assets/badgeyay.js"></script>
 
     {{content-for "body-footer"}}
-    
+
   </body>
 </html>
