Implement actions in Signup and corrected user model

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -24,7 +24,7 @@
 
     <link rel="stylesheet" href="{{rootURL}}css/jquery.minicolors.css">
     <link rel="stylesheet" href="{{rootURL}}css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/components/icon.css">
     <link rel="shortcut icon" href="{{rootURL}}favicon.ico">
 
     {{content-for "head-footer"}}
