Fixes #919 : Deploy Backend API to heroku and frontend fix for prod

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -34,6 +34,7 @@
 
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/badgeyay.js"></script>
+    <script src="{{rootURL}}assets/assets-fingerprint.js"></script>
 
     {{content-for "body-footer"}}
 
