--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -23,6 +23,7 @@
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/badgeyay.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/components/icon.css">
     <link rel="shortcut icon" href="{{rootURL}}favicon.ico">
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 
     {{content-for "head-footer"}}
   </head>
@@ -32,6 +33,8 @@
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/badgeyay.js"></script>
     <script src="{{rootURL}}assets/assets-fingerprint.js"></script>
+    <script src="/assets/js/tablesort.js"></script>
+
 
     {{content-for "body-footer"}}
 
