Revert "Unblocks the https request of badgeyay.com"
This reverts commit b6c4014a192ab45350541370d07ed4bf7b362ca3.

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -23,7 +23,7 @@
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/badgeyay.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/components/icon.css">
     <link rel="shortcut icon" href="{{rootURL}}favicon.ico">
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 
     {{content-for "head-footer"}}
   </head>
