adding favicon and adding starter for edit badge

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Badgeyay</title>
+    <link rel="shortcut icon" href="{{rootURL}}images/index">
+
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Badgeyay is a simple badge generator with a simple web UI.">
