--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -10,6 +10,7 @@
     <meta property="og:site_name" content="Badgeyay">
     <!-- Add deployment url here -->
     <meta property="og:url" content="">
+    <link rel="shortcut icon" href="{{rootURL}}images/index">
     <meta property="og:title" content="Badgeyay - Badge Generator">
     <meta property="og:description" content="Badgeyay is a simple badge generator with a simple web UI to add data and generate printable badges in a zip.">
     <meta name="twitter:site" content="@fossasia">
