--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -22,7 +22,7 @@
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/badgeyay.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/components/icon.css">
-    <link rel="shortcut icon" href="{{rootURL}}favicon.ico">
+    <link rel="shortcut icon" href="{{rootURL}}images/favicon.png">
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 
     {{content-for "head-footer"}}
