--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -1,42 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Badgeyay</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Badgeyay is a simple badge generator with a simple web UI.">
-    <meta property="og:site_name" content="Badgeyay">
-    <!-- Add deployment url here -->
-    <meta property="og:url" content="">
-    <meta property="og:title" content="Badgeyay - Badge Generator">
-    <meta property="og:description" content="Badgeyay is a simple badge generator with a simple web UI to add data and generate printable badges in a zip.">
-    <meta name="twitter:site" content="@fossasia">
-    <meta name="twitter:url" content="https://twitter.com/fossasia">
-    <meta name="twitter:title" content="Badgeyay - FOSSASIA">
-    <meta name="twitter:description" content="Badgeyay is a simple badge generator with a simple web UI.">
 
-    {{content-for "head"}}
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Badgeyay</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Badgeyay is a simple badge generator with a simple web UI.">
+  <meta property="og:site_name" content="Badgeyay">
+  <!-- Add deployment url here -->
+  <meta property="og:url" content="">
+  <meta property="og:title" content="Badgeyay - Badge Generator">
+  <meta property="og:description" content="Badgeyay is a simple badge generator with a simple web UI to add data and generate printable badges in a zip.">
+  <meta name="twitter:site" content="@fossasia">
+  <meta name="twitter:url" content="https://twitter.com/fossasia">
+  <meta name="twitter:title" content="Badgeyay - FOSSASIA">
+  <meta name="twitter:description" content="Badgeyay is a simple badge generator with a simple web UI."> {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/badgeyay.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/components/icon.css">
-    <link rel="shortcut icon" href="{{rootURL}}favicon.ico">
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+  <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
+  <link integrity="" rel="stylesheet" href="{{rootURL}}assets/badgeyay.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/components/icon.css">
+  <link rel="shortcut icon" href="{{rootURL}}images/favicon.png">
+  <script src="https://code.jquery.com/jquery-latest.min.js"></script> {{content-for "head-footer"}}
+</head>
 
-    {{content-for "head-footer"}}
-  </head>
-  <body>
-    {{content-for "body"}}
+<body>
+  {{content-for "body"}}
 
-    <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/badgeyay.js"></script>
-    <script src="{{rootURL}}assets/assets-fingerprint.js"></script>
-    <script src="/assets/js/tablesort.js"></script>
+  <script src="{{rootURL}}assets/vendor.js"></script>
+  <script src="{{rootURL}}assets/badgeyay.js"></script>
+  <script src="{{rootURL}}assets/assets-fingerprint.js"></script>
+  <script src="/assets/js/tablesort.js"></script> {{content-for "body-footer"}}
 
+</body>
 
-    {{content-for "body-footer"}}
-
-  </body>
 </html>
